upload_tmp_file/iptables
*filter
:INPUT DROP [1029028:53321694]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [44723822:21524638399]

#-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT

-A INPUT -s 10.10.8.251     -p tcp --dport 22 -j ACCEPT
#-A INPUT -s 116.12.204.154  -p tcp --dport 22 -j ACCEPT
-A INPUT -s 101.127.248.171  -p tcp --dport 22 -j ACCEPT
-A INPUT -s 10.65.140.240/28     -p tcp --dport 22 -j ACCEPT
-A INPUT -s 101.127.248.180  -p tcp --dport 22 -j ACCEPT
-A INPUT -s 101.127.248.181  -p tcp --dport 22 -j ACCEPT
-A INPUT -s 101.127.248.181  -p tcp --dport 8001 -j ACCEPT
-A INPUT -s 101.127.248.181  -p tcp --dport 8002 -j ACCEPT
-A INPUT -s 101.127.248.181  -p tcp --dport 8003 -j ACCEPT
-A INPUT -s 101.127.248.181  -p tcp --dport 8004 -j ACCEPT
-A INPUT -s 101.127.248.181  -p tcp --dport 8005 -j ACCEPT
-A INPUT -s 203.117.172.45  -p tcp --dport 8003 -j ACCEPT 
-A INPUT -s 203.117.172.45  -p tcp --dport 8004 -j ACCEPT 
-A INPUT -s 101.127.248.171  -p tcp --dport 8001 -j ACCEPT
-A INPUT -s 101.127.248.171  -p tcp --dport 8002 -j ACCEPT
-A INPUT -s 101.127.248.171  -p tcp --dport 8003 -j ACCEPT
-A INPUT -s 101.127.248.171  -p tcp --dport 8004 -j ACCEPT
-A INPUT -s 101.127.248.171  -p tcp --dport 8005 -j ACCEPT

-A INPUT -s 10.10.52.105  -p tcp --dport 22 -j ACCEPT
-A INPUT -s 203.116.214.60  -p tcp --dport 22 -j ACCEPT
-A INPUT -s 203.116.214.60  -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 203.116.173.27 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 101.127.248.181 -p tcp --dport 3306 -j ACCEPT


#-A INPUT -s 101.127.248.164/30  -p tcp --dport 22 -j ACCEPT
#-A INPUT -s 203.117.172.247 -p tcp --dport 22 -j ACCEPT

-A INPUT -s 10.10.8.250     -p udp --dport 161 -j ACCEPT
-A INPUT -s 203.117.172.250 -p udp --dport 161 -j ACCEPT
-A INPUT -s 10.10.8.40      -p udp --dport 161 -j ACCEPT
-A INPUT -s 10.10.8.36      -p udp --dport 161 -j ACCEPT
-A INPUT -s 10.10.8.37      -p udp --dport 161 -j ACCEPT
-A INPUT -s 203.117.172.36 -p udp --dport 161 -j ACCEPT
-A INPUT -s 203.117.172.37 -p udp --dport 161 -j ACCEPT
-A INPUT -s 203.117.172.198  -p tcp -j ACCEPT

# Drop packets from spoofed networks
-A INPUT -s 169.254.0.0/16   -j DROP
-A INPUT -s 172.16.0.0/12    -j DROP
#-A INPUT -s 10.0.0.0/8       -j DROP
#-A INPUT -s 127.0.0.0/8      -j DROP
-A INPUT -s 224.0.0.0/4      -j DROP
-A INPUT -d 224.0.0.0/4      -j DROP
-A INPUT -s 240.0.0.0/5      -j DROP
-A INPUT -d 240.0.0.0/5      -j DROP
-A INPUT -s 0.0.0.0/8        -j DROP
-A INPUT -d 0.0.0.0/8        -j DROP
-A INPUT -d 239.255.255.0/24 -j DROP
-A INPUT -d 255.255.255.255  -j DROP

# Drop Invalid packets
-A INPUT   -m state --state INVALID -j DROP
-A FORWARD -m state --state INVALID -j DROP
-A OUTPUT  -m state --state INVALID -j DROP

# Drop Bogus TCP packets
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP

-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT
-A INPUT -p icmp --icmp-type redirect -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 203.117.155.232 -p tcp --dport 4505 -j ACCEPT
-A INPUT -s 203.117.155.232 -p tcp --dport 4506 -j ACCEPT
-A INPUT -s 203.117.155.232 -p tcp --dport 4505 -j ACCEPT
-A INPUT -s 203.117.155.232 -p tcp --dport 4506 -j ACCEPT
-A INPUT -s 203.117.155.232 -p tcp --dport 4505 -j ACCEPT
-A INPUT -s 203.117.155.232 -p tcp --dport 4506 -j ACCEPT
COMMIT
